[package]
name = "rustlink"
version = "3.8.0"
edition = "2021"
license = "GPL-3.0-only"
default-run = "rustlink"

[dependencies]
# Async runtime and Web Server
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }

# Serialization (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (Clean console output)
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP Client (Keep only this ONE reqwest line)
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls", "stream"] }
regex-lite = "0.1"

# Audio and Discord Voice requirements (for Layer 2 & 3)
symphonia = { version = "0.5.3", features = ["all"] }
opus = "0.3.0"
xsalsa20poly1305 = "0.9.1"
aes-gcm = "0.10"
getrandom = "0.2"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
futures = "0.3.32"
rubato = "3.0.0"
byteorder = "1.5.0"
anyhow = "1.0.102"
uuid = { version = "1.23.3", features = ["v4"] }
async-trait = "0.1.89"
base64 = "0.22.1"
config = "0.15.24"
dashmap = "6.2.1"
url = "2.5"
rand = "0.8"
md-5 = "0.10"
tower-http = { version = "0.5", features = ["limit", "compression-gzip", "compression-deflate", "compression-br", "set-header", "cors"] }
tower = { version = "0.5", features = ["util", "limit"] }
libloading = "0.8"
regex = "1.10"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }
des = "0.9"
blowfish = "0.10"
cipher = "0.5.2"
aes = "0.8"
cbc = "0.1"
sha1 = "0.11.0"
sha2 = "0.10"
hex = "0.4.3"
urlencoding = "2.1.3"
quick-xml = { version = "0.31", features = ["serialize"] }
tokio-stream = "0.1.14"
lazy_static = "1.4"
bytes = "1.5"

[[bin]]
name = "rustlink"
path = "src/main.rs"

[[bin]]
name = "playback-worker"
path = "src/bin/playback_worker.rs"

[[bin]]
name = "source-worker"
path = "src/bin/source_worker.rs"

[dev-dependencies]
http-body-util = "0.1"
